--- a/public/styles.css
+++ b/public/styles.css
@@ -30,3 +30,10 @@
   --black: #000000;
   --gray: #ababab;
 }
+
+.preview-grid {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+}
