--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -18,7 +18,6 @@
   min-width: var(--width);
   min-height: var(--height);
   white-space: nowrap;
-  font-family: inherit;
   font-size: var(--font-size);
   line-height: 1;
   font-weight: 500;
@@ -27,6 +26,7 @@
   border: none;
   border-radius: var(--border-radius);
   user-select: none;
+  outline: none;
   cursor: pointer;
   transition: .3s color, .3s background-color, .3s border-color;
 
